--- a/lib/gits_web/live/host_live/dashboard.html.heex
+++ b/lib/gits_web/live/host_live/dashboard.html.heex
@@ -35,8 +35,13 @@
         navigate={~p"/hosts/#{@host.handle}/events/#{event.public_id}"}
         class="border rounded-lg p-4 grid gap-4"
       >
-        <div class="aspect-[3/2] w-24 shrink-0 overflow-hidden rounded-lg bg-zinc-200">
-          <img :if={event.poster} src={event.poster.url} alt="Event poster" class="size-full" />
+        <div class="aspect-[3/2] w-24 shrink-0 overflow-hidden rounded-lg bg-zinc-50">
+          <img
+            :if={event.poster}
+            src={event.poster.url}
+            alt="Event poster"
+            class="size-full object-cover"
+          />
         </div>
         <h3 class="text-lg/5 font-semibold">
           {event.name} The Ultimate Cheese Festival
