--- a/lib/gits_web/live/host_live/events/show.html.heex
+++ b/lib/gits_web/live/host_live/events/show.html.heex
@@ -40,7 +40,7 @@
           </span>
         </div>
       </div>
-      <.button variant={:solid}>
+      <.button :if={false} variant={:solid}>
         <.icon name="i-lucide-rocket" />
         <span>Publish</span>
       </.button>
@@ -61,8 +61,8 @@
             {label, action} <- [
               {"Overview", :overview},
               {"Details", :details},
-              {"Tickets", :tickets},
-              {"Settings", :settings}
+              {"Tickets", :tickets}
+              # {"Settings", :settings}
             ]
           }
           variant={:ghost}
