--- a/lib/gits_web/live/host_live/events/show/details.html.heex
+++ b/lib/gits_web/live/host_live/events/show/details.html.heex
@@ -8,10 +8,10 @@
     phx-submit={@submit_action}
     phx-target={@myself}
   >
-    <div :if={false} class="col-span-full">
+    <div class="col-span-full">
       <h2 class="text-base/7 font-semibold text-gray-900">Basic Information</h2>
       <p class="text-sm text-gray-600">
-        <!-- This information will be displayed publicly so be careful what you share. -->
+        Information about your event.
       </p>
     </div>
 
