--- a/lib/gits_web/live/host_live/events/list.html.heex
+++ b/lib/gits_web/live/host_live/events/list.html.heex
@@ -7,7 +7,7 @@
       <h2 class="text-4xl grow font-medium col-span-full">Events</h2>
 
       <.button variant={:solid} href={~p"/hosts/#{@handle}/events/create"}>
-        <.icon name="i-lucide-plus" />
+        <.icon class="ri--add-line" />
         <span>New event</span>
       </.button>
     </div>
