--- a/lib/gits_web/live/host_live/events/show/dashboard.html.heex
+++ b/lib/gits_web/live/host_live/events/show/dashboard.html.heex
@@ -1,5 +1,5 @@
 <div class="grid gap-4">
-  <div class="grid grid-cols-2 lg:grid-cols-3 lg:gap-6 gap-4">
+  <div :if={@event.state == :published} class="grid grid-cols-2 lg:grid-cols-3 lg:gap-6 gap-4">
     <div
       :for={
         {label, value} <- [
@@ -14,6 +14,29 @@
       <span class="text-3xl font-medium">{value}</span>
     </div>
   </div>
+
+  <div class="rounded-md bg-blue-50 p-4">
+    <div class="flex">
+      <div class="shrink-0">
+        <.icon class="text-blue-400 ri--information-2-fill text-lg" />
+      </div>
+      <div class="ml-3 flex-1 md:flex md:justify-between">
+        <p class="text-sm text-blue-700">
+          A new software update is available. See what’s new in version 2.0.4.
+        </p>
+        <.button size={:none} variant={:ghost}>
+          <span class="text-blue-700 hover:text-blue-600">Publish</span>
+          <.icon name="lucide--arrow-right" class="text-blue-600" />
+        </.button>
+        <p :if={false} class="mt-3 text-sm md:ml-6 md:mt-0">
+          <a href="#" class="whitespace-nowrap font-medium text-blue-700 hover:text-blue-600">
+            Details <span aria-hidden="true"> &rarr;</span>
+          </a>
+        </p>
+      </div>
+    </div>
+  </div>
+
   <div :if={false} class="flex">
     <h3 class="grow text-lg/8 font-medium">
       Webhooks
@@ -24,7 +47,7 @@
       phx-click={JS.push("manage_webhook") |> show_modal("manage-webhook")}
       phx-target={@myself}
     >
-      <.icon name="i-lucide-plus" />
+      <.icon name="lucide--plus" />
       <span>Add webhook</span>
     </.button>
   </div>
