--- a/lib/gits_web/live/host_live/events/show/settings.html.heex
+++ b/lib/gits_web/live/host_live/events/show/settings.html.heex
@@ -1,4 +1,23 @@
 <div class="grid gap-4">
+  <div class="col-span-full rounded-lg border border-amber-500/50 p-4">
+    <div class="flex">
+      <div class="shrink-0">
+        <.icon class="text-lg text-amber-400 ri--alert-fill" />
+      </div>
+      <div class="ml-3">
+        <h3 class="text-sm font-medium text-amber-700">
+          There are 2 issues with your event details
+        </h3>
+        <div class="mt-2 text-sm text-amber-600">
+          <ul role="list" class="list-disc space-y-1 pl-5">
+            <li>Your password must be at least 8 characters</li>
+            <li>Your password must include at least one pro wrestling finishing move</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <div class="flex flex-wrap">
     <h2 class="text-base/7 font-semibold text-gray-900">Webhooks</h2>
     <p class="text-sm text-gray-600">
@@ -15,7 +34,7 @@
         <div class="flex gap-2 text-sm">
           <dt class="text-zinc-400">
             <span class="sr-only">Webhook triggers</span>
-            <.icon name="i-lucide-zap" class="mt-1" />
+            <.icon name="lucide--zap" class="mt-1" />
           </dt>
           <dd class="flex flex-wrap gap-2">
             <%= for i <- [:order_completed, :order_refunded] do %>
@@ -35,7 +54,7 @@
         <div class="flex gap-2 text-sm">
           <dt class="text-zinc-400">
             <span class="sr-only">Webhook details</span>
-            <.icon name="i-lucide-sticky-note" class="mt-0.5" />
+            <.icon name="lucide--sticky-note" class="mt-0.5" />
           </dt>
           <dd>{webhook.details}</dd>
         </div>
@@ -48,7 +67,7 @@
           size={:box}
           variant={:ghost}
         >
-          <.icon name="i-lucide-pen-square" />
+          <.icon name="lucide--pen-square" />
           <span>Edit</span>
         </.button>
       </div>
@@ -61,7 +80,7 @@
       phx-click={JS.push("manage_webhook") |> show_modal("manage-webhook")}
       phx-target={@myself}
     >
-      <.icon name="i-lucide-plus" />
+      <.icon name="lucide--plus" />
       <span>Create</span>
     </.button>
   </div>
