--- a/lib/gits_web/live/host_live/settings.html.heex
+++ b/lib/gits_web/live/host_live/settings.html.heex
@@ -16,7 +16,7 @@
           variant={:ghost}
           phx-click={JS.patch(Routes.host_settings_path(@socket, :general, @host.handle))}
         >
-          <.icon name="i-lucide-pen-line" />
+          <.icon name="lucide--pen-line" />
           <span>Edit</span>
         </.button>
       </div>
@@ -76,7 +76,7 @@
           variant={:ghost}
           phx-click={JS.patch(Routes.host_settings_path(@socket, :billing, @host.handle))}
         >
-          <.icon name="i-lucide-pen-line" />
+          <.icon name="lucide--pen-line" />
           <span>Edit</span>
         </.button>
       </div>
