feat: improve layout and styling of core components
refactor the layout and styling of various components in `gitsweb.corecomponents`. adjust class orders for better consistency and readability. enhance the structure of the `header`, `flash`, and `event` components for improved user experience. this change streamlines the ui and ensures a more cohesive design across the application.

--- a/lib/gits_web/components/layouts/root.html.heex
+++ b/lib/gits_web/components/layouts/root.html.heex
@@ -20,7 +20,7 @@
     </script>
   </head>
 
-  <body class="font-poppins min-h-dvh leading-tight antialiased bg-white dark:bg-black">
+  <body class="font-poppins leading-tight antialiased bg-white dark:bg-black h-screen overflow-hidden">
     {@inner_content}
   </body>
 </html>
