--- a/lib/gits_web/live/host_live/events/show/details.html.heex
+++ b/lib/gits_web/live/host_live/events/show/details.html.heex
@@ -1,4 +1,4 @@
-<div>
+<div class="block">
   <.form
     :let={f}
     id="event-details"
@@ -173,7 +173,7 @@
       </.button>
     </div>
   </.form>
-  <.modal id="choose_venue" show={false}>
+  <.modal id="choose_venue">
     <.form
       :let={f}
       for={%{}}
