--- a/lib/gits_web/components/layouts/app.html.heex
+++ b/lib/gits_web/components/layouts/app.html.heex
@@ -1,5 +1,5 @@
 <.header user={@current_user} />
-<div class="grid min-h-[calc(100dvh-theme(space.72))] grid-rows-[1fr_auto]">
+<div class="grid grid-rows-[1fr_auto]">
   <div class="lg:pt-8">
     {@inner_content}
   </div>
