--- a/lib/gits_web/components/layouts/host.html.heex
+++ b/lib/gits_web/components/layouts/host.html.heex
@@ -1,7 +1,7 @@
 <.flash_group flash={@flash} />
 
-<div class="grid gap-4 h-dvh lg:grid-cols-[theme(space.64)_1fr]">
-  <aside class="absolute inset-0 z-10 lg:z-0 hidden space-y-8 bg-white lg:static lg:block">
+<div class="grid gap-4 lg:flex">
+  <aside class="absolute inset-0 z-10 hidden w-full max-w-64 shrink-0 space-y-8 bg-white lg:static lg:z-0 lg:block">
     <div class="flex items-center px-4 py-2">
       <div class="grow lg:py-1">
         <div class="">
@@ -71,9 +71,7 @@
       </div>
     </div>
   </aside>
-  <div class="overflow-auto">
-    <div>
-      {@inner_content}
-    </div>
+  <div class="h-screen w-full">
+    {@inner_content}
   </div>
 </div>
