feat: add danger style and improve event handling
add a new `:danger` style to `gitsweb.corecomponents` for better
visual feedback. refactor event handling in `gitsweb.hostlive.events.show`
to streamline state management and improve clarity. remove unused code
and enhance the user interface for event archiving.

--- a/lib/gits_web/live/host_live/events/list.html.heex
+++ b/lib/gits_web/live/host_live/events/list.html.heex
@@ -4,7 +4,7 @@
   </.host_header>
   <div class="lg:p-2 p-4 grid gap-8">
     <div class="flex w-full items-center">
-      <h2 class="text-4xl grow font-medium col-span-full">Events</h2>
+      <!-- <h2 class="text-4xl grow font-medium col-span-full">Events</h2> -->
 
       <.button variant={:solid} href={~p"/hosts/#{@handle}/events/create"}>
         <.icon class="ri--add-line" />
