--- a/lib/gits_web/live/host_live/events/show/dashboard.html.heex
+++ b/lib/gits_web/live/host_live/events/show/dashboard.html.heex
@@ -1,5 +1,5 @@
 <div class="grid gap-4">
-  <div :if={@event.state == :published} class="grid grid-cols-2 lg:grid-cols-3 lg:gap-6 gap-4">
+  <div :if={@state == :published} class="grid grid-cols-2 gap-4 lg:grid-cols-3 lg:gap-6">
     <div
       :for={
         {label, value} <- [
@@ -15,25 +15,31 @@
     </div>
   </div>
 
-  <div class="rounded-lg border border-border px-4 py-3">
-    <p class="text-sm">
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        width="16"
-        height="16"
-        viewBox="0 0 24 24"
-        fill="none"
-        stroke="currentColor"
-        stroke-width="2"
-        stroke-linecap="round"
-        stroke-linejoin="round"
-        class="lucide lucide-triangle-alert -mt-0.5 me-3 inline-flex text-amber-500"
-        aria-hidden="true"
-      ><path d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"></path><path d="M12 9v4"></path><path d="M12 17h.01"></path></svg>Some information is missing!
-    </p>
+  <div class="border-border bg-background rounded-lg border p-4">
+    <div class="flex gap-2">
+      <div class="flex grow gap-3">
+        <.icon class="shrink-0 text-lg text-amber-500 ri--alert-line" />
+        <div class="flex grow flex-col gap-3">
+          <div class="space-y-1">
+            <p class="text-sm font-medium">There are outstanding issues with this event!</p>
+            <p class="text-muted-foreground text-sm">
+              Please resolve current issues with the event and you should be able to publish the event
+            </p>
+          </div>
+          <div :if={false}>
+            <button class="focus-visible:outline-ring/70 [&amp;_svg]:pointer-events-none [&amp;_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/90 inline-flex h-8 items-center justify-center whitespace-nowrap rounded-lg px-3 text-xs font-medium shadow-sm shadow-black/5 outline-offset-2 transition-colors focus-visible:outline focus-visible:outline-2 disabled:pointer-events-none disabled:opacity-50">
+              Learn more
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 
-  <div class="rounded-lg border border-border bg-background p-4 xshadow-lg shadow-black/5">
+  <div
+    :if={@can_publish?}
+    class="border-border bg-background xshadow-lg rounded-lg border p-4 shadow-black/5"
+  >
     <div class="flex gap-2">
       <div class="flex grow gap-3">
         <svg
@@ -60,13 +66,13 @@
             </p>
           </div>
           <div class="flex gap-2">
-            <button class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-colors outline-offset-2 focus-visible:outline focus-visible:outline-2 focus-visible:outline-ring/70 disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg]:shrink-0 bg-primary text-primary-foreground shadow-sm shadow-black/5 hover:bg-primary/90 h-8 rounded-lg px-3 text-xs">
+            <button class="focus-visible:outline-ring/70 [&amp;_svg]:pointer-events-none [&amp;_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/90 inline-flex h-8 items-center justify-center whitespace-nowrap rounded-lg px-3 text-xs font-medium shadow-sm shadow-black/5 outline-offset-2 transition-colors focus-visible:outline focus-visible:outline-2 disabled:pointer-events-none disabled:opacity-50">
               Learn more
             </button>
           </div>
         </div>
         <button
-          class="inline-flex items-center justify-center whitespace-nowrap rounded-lg text-sm font-medium transition-colors outline-offset-2 focus-visible:outline focus-visible:outline-2 focus-visible:outline-ring/70 disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg]:shrink-0 hover:text-accent-foreground group -my-1.5 -me-2 size-8 shrink-0 p-0 hover:bg-transparent"
+          class="focus-visible:outline-ring/70 [&amp;_svg]:pointer-events-none [&amp;_svg]:shrink-0 hover:text-accent-foreground group -my-1.5 -me-2 inline-flex size-8 shrink-0 items-center justify-center whitespace-nowrap rounded-lg p-0 text-sm font-medium outline-offset-2 transition-colors hover:bg-transparent focus-visible:outline focus-visible:outline-2 disabled:pointer-events-none disabled:opacity-50"
           aria-label="Close notification"
         >
           <svg
@@ -86,57 +92,6 @@
             <path d="m6 6 12 12"></path>
           </svg>
         </button>
-      </div>
-    </div>
-  </div>
-
-  <div class="rounded-lg border border-border px-4 py-3">
-    <div class="flex gap-3">
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        width="16"
-        height="16"
-        viewBox="0 0 24 24"
-        fill="none"
-        stroke="currentColor"
-        stroke-width="2"
-        stroke-linecap="round"
-        stroke-linejoin="round"
-        class="lucide lucide-circle-alert mt-0.5 shrink-0 text-red-500 opacity-60"
-        aria-hidden="true"
-      >
-        <circle cx="12" cy="12" r="10"></circle>
-        <line x1="12" x2="12" y1="8" y2="12"></line>
-        <line x1="12" x2="12.01" y1="16" y2="16"></line>
-      </svg>
-      <div class="grow space-y-1">
-        <p class="text-sm font-medium">Password does not meet requirements:</p>
-        <ul class="list-inside list-disc text-sm text-muted-foreground">
-          <li>Minimum 8 characters</li>
-          <li>Inlcude a special character</li>
-        </ul>
-      </div>
-    </div>
-  </div>
-
-  <div class="rounded-md bg-blue-50 p-4">
-    <div class="flex">
-      <div class="shrink-0">
-        <.icon class="text-blue-400 ri--information-2-fill text-lg" />
-      </div>
-      <div class="ml-3 flex-1 md:flex md:justify-between">
-        <p class="text-sm text-blue-700">
-          A new software update is available. See what’s new in version 2.0.4.
-        </p>
-        <.button size={:none} variant={:ghost}>
-          <span class="text-blue-700 hover:text-blue-600">Publish</span>
-          <.icon name="lucide--arrow-right" class="text-blue-600" />
-        </.button>
-        <p :if={false} class="mt-3 text-sm md:ml-6 md:mt-0">
-          <a href="#" class="whitespace-nowrap font-medium text-blue-700 hover:text-blue-600">
-            Details <span aria-hidden="true"> &rarr;</span>
-          </a>
-        </p>
       </div>
     </div>
   </div>
