--- a/lib/gits_web/live/host_live/events/show/settings.html.heex
+++ b/lib/gits_web/live/host_live/events/show/settings.html.heex
@@ -1,5 +1,5 @@
 <div class="grid gap-4">
-  <div class="col-span-full rounded-lg border border-amber-500/50 p-4">
+  <div :if={false} class="col-span-full rounded-lg border border-amber-500/50 p-4">
     <div class="flex">
       <div class="shrink-0">
         <.icon class="text-lg text-amber-400 ri--alert-fill" />
@@ -51,7 +51,7 @@
           </dd>
         </div>
 
-        <div class="flex gap-2 text-sm">
+        <div class="flex gap-2 text-sm col-span-full">
           <dt class="text-zinc-400">
             <span class="sr-only">Webhook details</span>
             <.icon name="lucide--sticky-note" class="mt-0.5" />
@@ -72,17 +72,40 @@
         </.button>
       </div>
     </div>
+    <div class="flex gap-2">
+      <.button
+        size={:box}
+        phx-click={JS.push("manage_webhook") |> show_modal("manage-webhook")}
+        phx-target={@myself}
+      >
+        <.icon name="lucide--plus" />
+        <span>Create</span>
+      </.button>
+    </div>
+  </div>
+
+  <div class="flex flex-wrap">
+    <h2 class="text-base/7 font-semibold text-gray-900">Danger Zone</h2>
+    <p class="text-sm text-gray-600">
+      <!-- This information will be displayed publicly so be careful what you share. -->
+    </p>
   </div>
 
   <div class="flex gap-2">
-    <.button
-      size={:box}
-      phx-click={JS.push("manage_webhook") |> show_modal("manage-webhook")}
-      phx-target={@myself}
-    >
-      <.icon name="lucide--plus" />
-      <span>Create</span>
-    </.button>
+    <div class="flex grow gap-3">
+      <div class="flex grow flex-col gap-3">
+        <div class="space-y-1">
+          <p class="text-sm font-medium">Archive this event</p>
+          <p class="text-sm text-zinc-500">
+            <!-- Some things will happen -->
+          </p>
+        </div>
+      </div>
+
+      <.button variant={:danger} phx-click={show_modal("archive")} size={:sm} class="self-start">
+        <span>Archive</span>
+      </.button>
+    </div>
   </div>
 
   <.modal id="manage-webhook">
@@ -155,5 +178,24 @@
         </.button>
       </div>
     </.form>
+  </.modal>
+
+  <.modal id="archive">
+    <div class="grid gap-4">
+      <h3 class="text-xl font-medium">
+        Archive this event?
+      </h3>
+
+      <p class="text-sm text-gray-600">
+        Continue to archive this event?
+      </p>
+
+      <div class="flex justify-end gap-4">
+        <div role="none" class="grow"></div>
+        <.button variant={:danger} phx-click="archive" phx-target={@myself}>
+          <span class="text-sm font-semibold">Archive</span>
+        </.button>
+      </div>
+    </div>
   </.modal>
 </div>
