feat: enhance layout and add payment method calculation
add `calculate :payment_method_ready` to determine if the
`paystack_subaccount_code` is set. update layout components in
`app.html.heex` and `root.html.heex` to improve structure and
ensure the footer is consistently displayed.

--- a/lib/gits_web/components/layouts/app.html.heex
+++ b/lib/gits_web/components/layouts/app.html.heex
@@ -1,7 +1,9 @@
-<.header user={@current_user} />
-<div class="grid grid-rows-[1fr_auto]">
-  <div class="lg:pt-8">
-    {@inner_content}
+<div class="overflow-auto h-full">
+  <.header user={@current_user} />
+  <div class="grid grid-rows-[1fr_auto]">
+    <div class="lg:pt-8">
+      {@inner_content}
+    </div>
   </div>
+  <.footer />
 </div>
-<.footer />
