feat: refactor event and tickettype modules with fragments
introduce `fragments.actions` and `fragments.policies` to the
`gits.storefront.event` module, and `fragments.calculations` to
the `gits.storefront.tickettype` module. this refactor improves
modularity and organization of actions and policies, enhancing
code maintainability. additionally, update the `show` live view
to load and display the total ticket types for events.

--- a/lib/gits_web/live/host_live/events/show.html.heex
+++ b/lib/gits_web/live/host_live/events/show.html.heex
@@ -72,8 +72,8 @@
             {label, action, flag} <- [
               {"Dashboard", :dashboard, nil},
               {"Details", :details, :warn},
-              {"Tickets", :tickets, 0},
-              {"Settings", :settings, :warn}
+              {"Tickets", :tickets, @tickets_flag},
+              {"Settings", :settings, nil}
             ]
           }
           variant={:ghost}
