--- a/lib/gits_web/live/host_live/events/show.html.heex
+++ b/lib/gits_web/live/host_live/events/show.html.heex
@@ -1,4 +1,4 @@
-<div class="space-y-4 h-full overflow-auto">
+<div class="space-y-4 h-screen overflow-auto">
   <.host_header current_user={@current_user} handle={@handle} host_name={@host_name}>
     <.host_breadcrumb_button text="Events" href={~p"/hosts/#{@handle}/events"} />
     <span class="text-xs font-semibold text-zinc-400">/</span>
