refactor: update height classes to use h-dvh
refactor the height classes in `host.html.heex` and `root.html.heex`
to use `h-dvh` instead of `h-screen`. this change improves the
layout's responsiveness and ensures better compatibility with
dynamic viewport heights.

--- a/lib/gits_web/components/layouts/host.html.heex
+++ b/lib/gits_web/components/layouts/host.html.heex
@@ -71,7 +71,7 @@
       </div>
     </div>
   </aside>
-  <div class="h-screen w-full">
+  <div class="h-dvh w-full">
     {@inner_content}
   </div>
 </div>
